--- a/static/css/sarada.css
+++ b/static/css/sarada.css
@@ -1,12 +1,10 @@
 :root {
-
     /* Light theme */
-	--nc-lk-1: #008b6a;
+    --nc-lk-1: #008b6a;
     --nc-lk-2: #4ed0eb;
-    
     /* Dark theme */
-	--nc-d-lk-1: #ffffff;
-	--nc-d-lk-2: #4a4a4a;
+    --nc-d-lk-1: #ffffff;
+    --nc-d-lk-2: #4a4a4a;
 }
 
 p {
@@ -33,18 +31,28 @@ header h2 {
     margin-top: 5px;
 }
 
+div.gallery img {
+    width: 700px;
+    /* padding: 2.5px; */
+    width: 200px;
+    height: 200px;
+    margin: 13px;
+    border-radius: 12px;
+    box-shadow: 3px 3px 5px rgba(0, 0, 0, .5);
+}
+
 footer {
     clear: both;
     text-align: center;
     border-top: 1px solid var(--nc-lk-1);
     background: var(--nc-bg-2);
-	margin: 1rem calc(0px - (50vw - 50%)) 1rem;
-	padding-left: calc(50vw - 50%);
-	padding-right: calc(50vw - 50%);
+    margin: 1rem calc(0px - (50vw - 50%)) 1rem;
+    padding-left: calc(50vw - 50%);
+    padding-right: calc(50vw - 50%);
 }
 
 footer span {
-    color: #606060;
+    color: var(--nc-d-lk-2);
     font-size: 9pt;
     font-family: arial;
     position: relative;
